samples/_failures_safe/1761642625_85ccc5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82fa165d.c: In function ‘parser_init’:
./samples/SAFE/__tmp_82fa165d.c:151:24: error: expected ‘;’ at end of input
  151 |     parser->error_count
      |                        ^
      |                        ;
./samples/SAFE/__tmp_82fa165d.c:151:5: error: expected declaration or statement at end of input
  151 |     parser->error_count
      |     ^~~~~~
